# accountant-bot

./: .cursorrules  .dockerignore  .env.example  .gitignore  .golangci.yml  CLAUDE.md  Dockerfile  Makefile  README.md  go.mod  go.sum  mise.toml  pyproject.toml
.github/: dependabot.yml
.github/actions/bootstrap/: action.yml
.github/actions/build-push/: action.yml
.github/actions/check/: action.yml
.github/actions/terraform/: action.yml
.github/actions/test/: action.yml
.github/workflows/: deploy.yml  main.yml  ruff.yml  validate-py.yml  validate-tf.yml  validate.yml
accountant/: config.py  main.py
infra/env/prod/: .terraform.lock.hcl  main.tf  providers.tf  variables.tf  versions.tf
infra/modules/bot/: locals.tf  main.tf  outputs.tf  variables.tf
scripts/: setup_webhook.py
src/: config.go  config_test.go  expense.go  expense_test.go  handlers.go  handlers_test.go  main.go  main_test.go  sheets.go  sheets_test.go
src/accountant_bot/: config.py  expense_parser.py  handlers.py  lambda_handler.py  main.py  sheets_service.py
tests/: conftest.py  test_config.py  test_expense_parser.py  test_sheets_service.py
